--- a/packages/garden/garden_dash_button.yaml
+++ b/packages/garden/garden_dash_button.yaml
@@ -11,13 +11,10 @@ script:
   dash_irrigation:
     sequence:
 
-      #=== Only run if Master Control Switch is on
-      - condition: state
-        entity_id: input_boolean.irrigation_master_control_switch
-        state: 'on'
-
       - service_template: >
-          {% if is_state('input_boolean.cycle1_running', 'off') and 
+          {% if is_state('input_boolean.irrigation_master_control_switch', 'off') %}
+            script.dash_irrigation_not_started
+          {% elif is_state('input_boolean.cycle1_running', 'off') and 
                 is_state('input_boolean.cycle2_running', 'off') %}
             script.dash_start_irrigation
           {% else %}
@@ -66,6 +63,7 @@ script:
         data_template:
           entity_id: >
             {{ 'media_player.' ~ states('input_select.announce_room') }}
+          with_group: 'true'  
 
 
   #========================================================
@@ -81,3 +79,42 @@ script:
             - input_boolean.cycle1_manual_run
             - input_boolean.cycle2_manual_run
     
+
+  #================================================================
+  #=== Script when irrigation doesn't run when DASH button pressed
+  #================================================================
+  dash_irrigation_not_started:
+    sequence:
+
+      - wait_template: >
+          {{ is_state('script.announce' , 'off') }}      
+        timeout: '00:00:05'
+
+      #=== Set sonos parameters
+      - service: script.setup_sonos_parameters
+        data:
+          room: kitchen
+          volume: 0.3
+
+      #=== Prepare Sonos devices (Snapshot, Unjoin and set Volume)
+      - service: script.prepare_sonos_devices
+
+      #=== Wait for Sonos devices to be ready
+      - delay: "00:00:01"
+
+      - wait_template: "{{ is_state('script.prepare_sonos_devices', 'off') }}"
+
+      #=== Announce irrigation
+      - service: script.announce_irrigation_not_started
+
+      - wait_template: "{{ is_state('script.announce_irrigation_not_started' , 'on') }}"
+        timeout: '00:00:02'
+
+      - wait_template: "{{ is_state('script.announce_irrigation_not_started' , 'off') }}"
+
+      #=== Restore Sonos
+      - service: media_player.sonos_restore
+        data_template:
+          entity_id: >
+            {{ 'media_player.' ~ states('input_select.announce_room') }}
+          with_group: 'true'  
