--- a/packages/garden/garden_irrigation.yaml
+++ b/packages/garden/garden_irrigation.yaml
@@ -6,9 +6,6 @@ automation:
 
   #============================================================
   #=== Set next run time when schedule enabled or time changed
-  #===
-  #=== TO DO
-  #===   Set PULSETIMEx to slightly more than the corresponding zone runtime (use MQTT)
   #============================================================
   - alias: Irrigation - Set next run time when schedule enabled or time changed
     initial_state: on
@@ -287,7 +284,7 @@ automation:
         data_template:
           entity_id: input_datetime.last_irrigated_time
           date: >
-            {{ as_timestamp(now()) | timestamp_custom("%Y-%m-%d ") }}
+            {{ as_timestamp(now()) | timestamp_custom("%Y-%m-%d") }}
           time: >
             {{ as_timestamp(now()) | timestamp_custom("%H:%M") }}
 
@@ -311,13 +308,13 @@ script:
           entity_id: input_datetime.cycle{{ cycle }}_next_run_time
           date: >
             {% if states('input_select.cycle' + cycle + '_watering_days') == 'Daily' %}
-              {{ (as_timestamp(now() ) + 24 * 3600 ) | timestamp_custom("%Y-%m-%d ") }}
+              {{ (as_timestamp(now() ) + 24 * 3600 ) | timestamp_custom("%Y-%m-%d") }}
             {% elif states('input_select.cycle' + cycle + '_watering_days') == 'Alternate' %}  
-              {{ (as_timestamp(now() ) + 48 * 3600 ) | timestamp_custom("%Y-%m-%d ") }}
+              {{ (as_timestamp(now() ) + 48 * 3600 ) | timestamp_custom("%Y-%m-%d") }}
             {% else %}
             {% endif %}
           time: >
-              {{ states('input_select.cycle' + cycle + '_schedule_time') }}
+            {{ states('input_select.cycle' + cycle + '_schedule_time') }}
 
       #=== Only continue if no cycle is running
       - condition: state
@@ -407,6 +404,12 @@ script:
   irrigation_irrigate_a_zone:
     sequence:
 
+      #=== Call the script to set the sonoff PULSETIME
+      - service: script.set_sonoff_pulsetime
+        data_template:
+          cycle: '{{ cycle }}'
+          zone: '{{ zone }}'
+
       #=== Don't continue if duration is zero
       - condition: template
         value_template: >
@@ -457,3 +460,26 @@ script:
       - wait_template: >
           {% set entity = 'switch.zone' + zone + '_valve' %}
           {{ is_state(entity , 'off') }}
+
+
+  #========================================================================
+  #=== Set Sonoff PULSETIME to 15 seconds longer than the zone runtime
+  #=== is passed:
+  #===   {{ cycle }}
+  #===   {{ zone }}
+  #===
+  #=== This acts as a fail safe in the event of any communication failure
+  #=== between HA and the Sonoff. The Sonoff will switch off under its own
+  #=== control so closing the valve.
+  #========================================================================
+  set_sonoff_pulsetime:
+    sequence:
+      - service: mqtt.publish
+        data_template:
+          topic: >
+            sonoff4ch01/cmnd/pulsetime{{ zone }}
+          payload: >
+            {% set payload = states('input_number.cycle' + cycle + '_zone' + zone + '_duration')  | int %}
+            {% set payload = (payload * 60) + 15 %}
+            {{ payload }}
+
